# minirover

./: gps_node.py  setup.py
install/: local_setup.sh  setup.sh
install/minirover_control/share/minirover_control/: package.bash  package.zsh
install/minirover_sensores/share/minirover_sensores/: package.xml
keyboard_control/: package.xml  setup.cfg  setup.py
keyboard_control/keyboard_control/: keyboard_control_node.py
log/: latest_build
minirover_control/: CMakeLists.txt  package.xml  setup.py
minirover_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
minirover_control/install/minirover_control/share/ament_index/resource_index/parent_prefix_path/: minirover_control
minirover_control/install/minirover_control/share/minirover_control/: package.dsv  package.ps1  package.sh  package.xml
minirover_control/install/minirover_control/share/minirover_control/cmake/: minirover_controlConfig.cmake
minirover_control/log/: latest_build
minirover_control/minirover_control/: keyboard_control_node.py
minirover_display/: CMakeLists.txt  package.xml  setup.cfg  setup.py
minirover_display/minirover_display/: display.py
minirover_sensores/: CMakeLists.txt  package.xml  setup.cfg  setup.py
minirover_sensores/minirover_sensores/: gps_node.py
