<?xml version="1.0"?>
<package format="3">
  <name>keyboard_control</name>
  <version>0.1.0</version>
  <description>Nodo ROS2 para controlar Arduino usando las flechas del teclado</description>
  <maintainer email="tu@correo.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pynput</exec_depend>
</package>
