<?xml version="1.0"?>
<package format="3">
  <name>minirover_control</name>
  <version>0.1.0</version>
  <description>Paquete ROS2 para controlar Arduino usando las flechas del teclado</description>
  <maintainer email="tucorreo@dominio.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pynput</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>