<?xml version="1.0"?>
<package format="3">
  <name>minirover_display</name>
  <version>0.1.0</version>
  <description>
    Paquete para display del minirover
    Muestra información de sensores como GPS, brújula, velocidad y cámara en tiempo real.
  </description>
  <maintainer email="tucorreo@dominio.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
    <exec_depend>python3</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pil</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
