<package format="3">
  <name>minirover_sensores</name>
  <version>0.1.0</version>
  <description>Paquete para sensores del minirover</description>
  <maintainer email="tucorreo@dominio.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
